run new experiments
Remove the Last Phonetic

--- a/1_preprocessing/sound.ipynb
+++ b/1_preprocessing/sound.ipynb
@@ -10009,67 +10009,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1163,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'aɪ': array([3, 5, 1, 0, 0, 1, 0, 1]),\n",
-       " 'aʊ': array([3, 5, 1, 0, 0, 1, 1, 1]),\n",
-       " 'b': array([ 1,  0, 12,  0,  0,  0,  0,  0]),\n",
-       " 'd': array([1, 0, 8, 1, 0, 0, 0, 0]),\n",
-       " 'eɪ': array([0, 3, 1, 0, 0, 1, 0, 1]),\n",
-       " 'f': array([ 1,  0, 11,  0,  0,  0,  0,  1]),\n",
-       " 'g': array([3, 1, 8, 0, 5, 0, 0, 0]),\n",
-       " 'h': array([0, 0, 0, 0, 3, 0, 0, 0]),\n",
-       " 'i': array([0, 1, 1, 0, 0, 1, 0, 1]),\n",
-       " 'j': array([5, 1, 1, 0, 0, 0, 1, 0]),\n",
-       " 'k': array([3, 1, 8, 0, 5, 0, 0, 1]),\n",
-       " 'l': array([5, 0, 1, 1, 0, 0, 0, 0]),\n",
-       " 'm': array([1, 0, 4, 0, 1, 0, 0, 0]),\n",
-       " 'n': array([1, 0, 0, 1, 1, 0, 0, 0]),\n",
-       " 'oʊ': array([3, 5, 1, 0, 0, 1, 1, 1]),\n",
-       " 'p': array([ 1,  0, 12,  0,  0,  0,  0,  1]),\n",
-       " 'r': array([5, 0, 1, 5, 0, 0, 1, 0]),\n",
-       " 's': array([1, 0, 7, 1, 0, 0, 0, 1]),\n",
-       " 't': array([1, 0, 8, 1, 0, 0, 0, 1]),\n",
-       " 'u': array([3, 1, 1, 0, 0, 1, 1, 1]),\n",
-       " 'v': array([ 1,  0, 11,  0,  0,  0,  1,  0]),\n",
-       " 'w': array([6, 0, 5, 0, 0, 0, 1, 0]),\n",
-       " 'z': array([1, 0, 7, 1, 0, 0, 0, 0]),\n",
-       " 'æ': array([0, 5, 1, 0, 0, 1, 0, 1]),\n",
-       " 'ð': array([1, 0, 7, 3, 0, 0, 0, 0]),\n",
-       " 'ŋ': array([0, 1, 0, 0, 6, 0, 0, 0]),\n",
-       " 'ɑ': array([3, 5, 1, 0, 0, 1, 0, 1]),\n",
-       " 'ɔ': array([3, 0, 1, 0, 0, 1, 1, 1]),\n",
-       " 'ɔɪ': array([3, 0, 1, 0, 0, 1, 1, 0]),\n",
-       " 'ə': array([0, 0, 1, 0, 0, 1, 0, 0]),\n",
-       " 'ɛ': array([0, 3, 1, 0, 0, 1, 0, 0]),\n",
-       " 'ɝ': array([0, 0, 1, 5, 0, 1, 0, 0]),\n",
-       " 'ɪ': array([0, 1, 1, 0, 0, 1, 0, 0]),\n",
-       " 'ʃ': array([0, 1, 7, 0, 0, 0, 0, 1]),\n",
-       " 'ʊ': array([3, 1, 1, 0, 0, 1, 1, 0]),\n",
-       " 'ʌ': array([3, 3, 1, 0, 0, 1, 0, 0]),\n",
-       " 'ʒ': array([0, 0, 6, 0, 0, 0, 0, 0]),\n",
-       " 'ʤ': array([0, 1, 6, 0, 0, 0, 0, 0]),\n",
-       " 'ʧ': array([0, 1, 6, 0, 0, 0, 0, 1]),\n",
-       " 'θ': array([1, 0, 7, 3, 0, 0, 0, 1])}"
-      ]
-     },
-     "execution_count": 1163,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eSPEDictVES"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1164,
    "metadata": {
     "collapsed": true
@@ -11074,7 +11013,7 @@
    "cell_type": "code",
    "execution_count": 1349,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -11166,7 +11105,7 @@
    "cell_type": "code",
    "execution_count": 1350,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -11258,7 +11197,7 @@
    "cell_type": "code",
    "execution_count": 1351,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -11350,7 +11289,7 @@
    "cell_type": "code",
    "execution_count": 1352,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -11442,7 +11381,7 @@
    "cell_type": "code",
    "execution_count": 1353,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -11528,6 +11467,379 @@
    ],
    "source": [
     "plotScoresLine(resultsDictOnlyVoiceD3VSE, 'D3-VSE')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 把最後一個音節拿掉或是分數給低一點（像是 d, t, b, p 之類的）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1374,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getTweetScoreRemoveLastPhonetic(tweet):\n",
+    "    wordCount = 0\n",
+    "    words = tokenize(tweet)\n",
+    "    score = np.zeros((8,), dtype=np.int)\n",
+    "    for word in words:\n",
+    "        # 字典裡找不到這個字\n",
+    "        cmu, ipa = cv.convert(word)\n",
+    "        ipa = re.sub('[ˌˈ ]' ,'' ,ipa)\n",
+    "        if '*' in ipa:\n",
+    "            continue\n",
+    "        wordCount += 1\n",
+    "        i = 0\n",
+    "        while i < len(ipa):\n",
+    "            \n",
+    "            # 最後一個音標\n",
+    "            if i == len(ipa)-1:\n",
+    "                sym = ipa[i]\n",
+    "#                 print('Last: ', sym)\n",
+    "                if sym not in ['d', 't', 'b', 'p', 's']:\n",
+    "#                     print('Not in: ',sym)\n",
+    "                    score += eSPEDictV2[sym]\n",
+    "                i += 1\n",
+    "            # 非最後一個音標\n",
+    "            else:\n",
+    "                try:\n",
+    "                    sym = ipa[i] + ipa[i+1]\n",
+    "#                     print('Not Last: ', sym)\n",
+    "                    score += eSPEDictV2[sym]\n",
+    "                    i += 2\n",
+    "                except KeyError:\n",
+    "                    sym = ipa[i]\n",
+    "#                     print('Not Last: ', sym)\n",
+    "                    score += eSPEDictV2[sym]\n",
+    "                    i += 1\n",
+    "\n",
+    "    score = np.append(score, wordCount)\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1356,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 4s, sys: 1.11 s, total: 3min 5s\n",
+      "Wall time: 3min 3s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Patient\n",
+    "groupD1RLPScores = []\n",
+    "for i, person in enumerate(groupD1Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhonetic(tweet)\n",
+    "    groupD1RLPScores.append(list(score))\n",
+    "    \n",
+    "groupD2RLPScores = []\n",
+    "for i, person in enumerate(groupD2Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhonetic(tweet)\n",
+    "    groupD2RLPScores.append(list(score))\n",
+    "    \n",
+    "groupD3RLPScores = []\n",
+    "for i, person in enumerate(groupD3Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhonetic(tweet)\n",
+    "    groupD3RLPScores.append(list(score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1357,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 27.2 s, sys: 0 ns, total: 27.2 s\n",
+      "Wall time: 27.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Ordinary\n",
+    "baseD1RLPScores = []\n",
+    "for i, person in enumerate(baseD1Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhonetic(tweet)\n",
+    "    baseD1RLPScores.append(list(score))\n",
+    "    \n",
+    "baseD2RLPScores = []\n",
+    "for i, person in enumerate(baseD2Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhonetic(tweet)\n",
+    "    baseD2RLPScores.append(list(score))\n",
+    "    \n",
+    "baseD3RLPScores = []\n",
+    "for i, person in enumerate(baseD3Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhonetic(tweet)\n",
+    "    baseD3RLPScores.append(list(score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1358,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groupD1RLPScores = standardizeFeatures(groupD1RLPScores)\n",
+    "groupD2RLPScores = standardizeFeatures(groupD2RLPScores)\n",
+    "groupD3RLPScores = standardizeFeatures(groupD3RLPScores)\n",
+    "baseD1RLPScores = standardizeFeatures(baseD1RLPScores)\n",
+    "baseD2RLPScores = standardizeFeatures(baseD2RLPScores)\n",
+    "baseD3RLPScores = standardizeFeatures(baseD3RLPScores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1361,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groupOnlyVoiceD1RLPScores = [ele[0:-1] for ele in groupD1RLPScores]\n",
+    "groupOnlyVoiceD2RLPScores = [ele[0:-1] for ele in groupD2RLPScores]\n",
+    "groupOnlyVoiceD3RLPScores = [ele[0:-1] for ele in groupD3RLPScores]\n",
+    "baseOnlyVoiceD1RLPScores = [ele[0:-1] for ele in baseD1RLPScores]\n",
+    "baseOnlyVoiceD2RLPScores = [ele[0:-1] for ele in baseD2RLPScores]\n",
+    "baseOnlyVoiceD3RLPScores = [ele[0:-1] for ele in baseD3RLPScores]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1366,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of RLP-D1\n",
+      "------------------------------\n",
+      "0\t0.7666666666666667\n",
+      "1\t0.7666666666666667\n",
+      "2\t0.8\n",
+      "3\t0.8\n",
+      "4\t0.9333333333333333\n",
+      "5\t0.7333333333333333\n",
+      "6\t0.7\n",
+      "7\t0.9\n",
+      "8\t0.8333333333333334\n",
+      "9\t0.7\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7933333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD1RLP = getRandomForestPrecision(baseD1RLPScores, groupD1RLPScores, 'RLP-D1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1367,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of RLP-D2\n",
+      "------------------------------\n",
+      "0\t0.7666666666666667\n",
+      "1\t0.8\n",
+      "2\t0.7666666666666667\n",
+      "3\t0.8666666666666667\n",
+      "4\t0.7333333333333333\n",
+      "5\t0.8\n",
+      "6\t0.8\n",
+      "7\t0.8333333333333334\n",
+      "8\t0.7333333333333333\n",
+      "9\t0.7333333333333333\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7833333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD2RLP = getRandomForestPrecision(baseD2RLPScores, groupD2RLPScores, 'RLP-D2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1368,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of RLP-D3\n",
+      "------------------------------\n",
+      "0\t0.8333333333333334\n",
+      "1\t0.8666666666666667\n",
+      "2\t0.7666666666666667\n",
+      "3\t0.7333333333333333\n",
+      "4\t0.7666666666666667\n",
+      "5\t0.8\n",
+      "6\t0.6666666666666666\n",
+      "7\t0.7333333333333333\n",
+      "8\t0.8666666666666667\n",
+      "9\t0.7\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7733333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD3RLP = getRandomForestPrecision(baseD3RLPScores, groupD3RLPScores, 'RLP-D3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1369,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of OnlyVoice-RLP-D1\n",
+      "------------------------------\n",
+      "0\t0.8666666666666667\n",
+      "1\t0.8333333333333334\n",
+      "2\t0.8333333333333334\n",
+      "3\t0.7333333333333333\n",
+      "4\t0.7666666666666667\n",
+      "5\t0.8666666666666667\n",
+      "6\t0.8333333333333334\n",
+      "7\t0.7\n",
+      "8\t0.8333333333333334\n",
+      "9\t0.7666666666666667\n",
+      "------------------------------\n",
+      "Avg. precision: 0.8033333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierOnlyVoiceD1RLP = getRandomForestPrecision(baseOnlyVoiceD1RLPScores, groupOnlyVoiceD1RLPScores, 'OnlyVoice-RLP-D1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1370,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of OnlyVoice-RLP-D2\n",
+      "------------------------------\n",
+      "0\t0.7\n",
+      "1\t0.8333333333333334\n",
+      "2\t0.8333333333333334\n",
+      "3\t0.6333333333333333\n",
+      "4\t0.8\n",
+      "5\t0.8\n",
+      "6\t0.8\n",
+      "7\t0.7666666666666667\n",
+      "8\t0.6666666666666666\n",
+      "9\t0.8\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7633333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierOnlyVoiceD2RLP = getRandomForestPrecision(baseOnlyVoiceD2RLPScores, groupOnlyVoiceD2RLPScores, 'OnlyVoice-RLP-D2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1371,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of OnlyVoice-RLP-D3\n",
+      "------------------------------\n",
+      "0\t0.7333333333333333\n",
+      "1\t0.8\n",
+      "2\t0.8\n",
+      "3\t0.8333333333333334\n",
+      "4\t0.8333333333333334\n",
+      "5\t0.6666666666666666\n",
+      "6\t0.8333333333333334\n",
+      "7\t0.7333333333333333\n",
+      "8\t0.7\n",
+      "9\t0.7666666666666667\n",
+      "------------------------------\n",
+      "Avg. precision: 0.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierOnlyVoiceD3RLP = getRandomForestPrecision(baseOnlyVoiceD3RLPScores, groupOnlyVoiceD3RLPScores, 'OnlyVoice-RLP-D3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 把最後一個音節非母音的都拿掉"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO: 只用類別 A, (B), C, D 分類"
    ]
   },
   {
