--- a/1_preprocessing/sound.ipynb
+++ b/1_preprocessing/sound.ipynb
@@ -11478,7 +11478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1374,
+   "execution_count": 1377,
    "metadata": {
     "collapsed": true
    },
@@ -11497,25 +11497,20 @@
     "        wordCount += 1\n",
     "        i = 0\n",
     "        while i < len(ipa):\n",
-    "            \n",
     "            # 最後一個音標\n",
     "            if i == len(ipa)-1:\n",
     "                sym = ipa[i]\n",
-    "#                 print('Last: ', sym)\n",
-    "                if sym not in ['d', 't', 'b', 'p', 's']:\n",
-    "#                     print('Not in: ',sym)\n",
+    "                if sym not in ['d', 't', 'b', 'p']:\n",
     "                    score += eSPEDictV2[sym]\n",
     "                i += 1\n",
     "            # 非最後一個音標\n",
     "            else:\n",
     "                try:\n",
     "                    sym = ipa[i] + ipa[i+1]\n",
-    "#                     print('Not Last: ', sym)\n",
     "                    score += eSPEDictV2[sym]\n",
     "                    i += 2\n",
     "                except KeyError:\n",
     "                    sym = ipa[i]\n",
-    "#                     print('Not Last: ', sym)\n",
     "                    score += eSPEDictV2[sym]\n",
     "                    i += 1\n",
     "\n",
@@ -11828,12 +11823,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1378,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def getTweetScoreRemoveLastPhoneticV2(tweet):\n",
+    "    wordCount = 0\n",
+    "    words = tokenize(tweet)\n",
+    "    score = np.zeros((8,), dtype=np.int)\n",
+    "    for word in words:\n",
+    "        # 字典裡找不到這個字\n",
+    "        cmu, ipa = cv.convert(word)\n",
+    "        ipa = re.sub('[ˌˈ ]' ,'' ,ipa)\n",
+    "        if '*' in ipa:\n",
+    "            continue\n",
+    "        wordCount += 1\n",
+    "        i = 0\n",
+    "        while i < len(ipa):\n",
+    "            # 最後一個音標\n",
+    "            if i == len(ipa)-1:\n",
+    "                sym = ipa[i]\n",
+    "                if sym not in ['j','w','r','l','p','b','f','v','m','t','d','θ','ð','n','s','z','ʧ','ʤ','ʃ','ʒ','k','g','ŋ','h']:\n",
+    "                    score += eSPEDictV2[sym]\n",
+    "                i += 1\n",
+    "            # 非最後一個音標\n",
+    "            else:\n",
+    "                try:\n",
+    "                    sym = ipa[i] + ipa[i+1]\n",
+    "                    score += eSPEDictV2[sym]\n",
+    "                    i += 2\n",
+    "                except KeyError:\n",
+    "                    sym = ipa[i]\n",
+    "                    score += eSPEDictV2[sym]\n",
+    "                    i += 1\n",
+    "\n",
+    "    score = np.append(score, wordCount)\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1379,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 7s, sys: 1.22 s, total: 3min 8s\n",
+      "Wall time: 3min 4s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Patient\n",
+    "groupD1RLPV2Scores = []\n",
+    "for i, person in enumerate(groupD1Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhoneticV2(tweet)\n",
+    "    groupD1RLPV2Scores.append(list(score))\n",
+    "    \n",
+    "groupD2RLPV2Scores = []\n",
+    "for i, person in enumerate(groupD2Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhoneticV2(tweet)\n",
+    "    groupD2RLPV2Scores.append(list(score))\n",
+    "    \n",
+    "groupD3RLPV2Scores = []\n",
+    "for i, person in enumerate(groupD3Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhoneticV2(tweet)\n",
+    "    groupD3RLPV2Scores.append(list(score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1380,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 27.9 s, sys: 232 ms, total: 28.1 s\n",
+      "Wall time: 27.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Patient\n",
+    "baseD1RLPV2Scores = []\n",
+    "for i, person in enumerate(baseD1Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhoneticV2(tweet)\n",
+    "    baseD1RLPV2Scores.append(list(score))\n",
+    "    \n",
+    "baseD2RLPV2Scores = []\n",
+    "for i, person in enumerate(baseD2Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhoneticV2(tweet)\n",
+    "    baseD2RLPV2Scores.append(list(score))\n",
+    "    \n",
+    "baseD3RLPV2Scores = []\n",
+    "for i, person in enumerate(baseD3Text):\n",
+    "    tweets = person.split('\\n')\n",
+    "    score = np.zeros((9,), dtype=np.int)\n",
+    "    for tweet in tweets:\n",
+    "        score += getTweetScoreRemoveLastPhoneticV2(tweet)\n",
+    "    baseD3RLPV2Scores.append(list(score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1382,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groupD1RLPV2Scores = standardizeFeatures(groupD1RLPV2Scores)\n",
+    "groupD2RLPV2Scores = standardizeFeatures(groupD2RLPV2Scores)\n",
+    "groupD3RLPV2Scores = standardizeFeatures(groupD3RLPV2Scores)\n",
+    "baseD1RLPV2Scores = standardizeFeatures(baseD1RLPV2Scores)\n",
+    "baseD2RLPV2Scores = standardizeFeatures(baseD2RLPV2Scores)\n",
+    "baseD3RLPV2Scores = standardizeFeatures(baseD3RLPV2Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1383,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groupOnlyVoiceD1RLPV2Scores = [ele[0:-1] for ele in groupD1RLPV2Scores]\n",
+    "groupOnlyVoiceD2RLPV2Scores = [ele[0:-1] for ele in groupD2RLPV2Scores]\n",
+    "groupOnlyVoiceD3RLPV2Scores = [ele[0:-1] for ele in groupD3RLPV2Scores]\n",
+    "baseOnlyVoiceD1RLPV2Scores = [ele[0:-1] for ele in baseD1RLPV2Scores]\n",
+    "baseOnlyVoiceD2RLPV2Scores = [ele[0:-1] for ele in baseD2RLPV2Scores]\n",
+    "baseOnlyVoiceD3RLPV2Scores = [ele[0:-1] for ele in baseD3RLPV2Scores]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1387,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of RLPV2-D1\n",
+      "------------------------------\n",
+      "0\t0.8\n",
+      "1\t0.6666666666666666\n",
+      "2\t0.8666666666666667\n",
+      "3\t0.7\n",
+      "4\t0.8\n",
+      "5\t0.8666666666666667\n",
+      "6\t0.9\n",
+      "7\t0.7333333333333333\n",
+      "8\t0.7666666666666667\n",
+      "9\t0.8666666666666667\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7966666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD1RLPV2 = getRandomForestPrecision(baseD1RLPV2Scores, groupD1RLPV2Scores, 'RLPV2-D1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1388,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of RLPV2-D2\n",
+      "------------------------------\n",
+      "0\t0.8666666666666667\n",
+      "1\t0.9\n",
+      "2\t0.7666666666666667\n",
+      "3\t0.7333333333333333\n",
+      "4\t0.7666666666666667\n",
+      "5\t0.7666666666666667\n",
+      "6\t0.8666666666666667\n",
+      "7\t0.7\n",
+      "8\t0.8333333333333334\n",
+      "9\t0.7333333333333333\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7933333333333332\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD2RLPV2 = getRandomForestPrecision(baseD2RLPV2Scores, groupD2RLPV2Scores, 'RLPV2-D2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1389,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of RLPV2-D3\n",
+      "------------------------------\n",
+      "0\t0.7333333333333333\n",
+      "1\t1.0\n",
+      "2\t0.9\n",
+      "3\t0.7666666666666667\n",
+      "4\t0.7\n",
+      "5\t0.7666666666666667\n",
+      "6\t0.6666666666666666\n",
+      "7\t0.7666666666666667\n",
+      "8\t0.7666666666666667\n",
+      "9\t0.8\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7866666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD3RLPV2 = getRandomForestPrecision(baseD3RLPV2Scores, groupD3RLPV2Scores, 'RLPV2-D3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1390,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of OnlyVoice-RLPV2-D1\n",
+      "------------------------------\n",
+      "0\t0.8666666666666667\n",
+      "1\t0.7\n",
+      "2\t0.8666666666666667\n",
+      "3\t0.7666666666666667\n",
+      "4\t0.7\n",
+      "5\t0.7666666666666667\n",
+      "6\t0.7\n",
+      "7\t0.8333333333333334\n",
+      "8\t0.9\n",
+      "9\t0.7\n",
+      "------------------------------\n",
+      "Avg. precision: 0.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierOnlyVoiceD1RLPV2 = getRandomForestPrecision(baseOnlyVoiceD1RLPV2Scores, groupOnlyVoiceD1RLPV2Scores, 'OnlyVoice-RLPV2-D1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1391,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of OnlyVoice-RLPV2-D2\n",
+      "------------------------------\n",
+      "0\t0.8\n",
+      "1\t0.8333333333333334\n",
+      "2\t0.6666666666666666\n",
+      "3\t0.7333333333333333\n",
+      "4\t0.8666666666666667\n",
+      "5\t0.9\n",
+      "6\t0.7\n",
+      "7\t0.8333333333333334\n",
+      "8\t0.9\n",
+      "9\t0.8333333333333334\n",
+      "------------------------------\n",
+      "Avg. precision: 0.8066666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierOnlyVoiceD2RLPV2 = getRandomForestPrecision(baseOnlyVoiceD2RLPV2Scores, groupOnlyVoiceD2RLPV2Scores, 'OnlyVoice-RLPV2-D2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1392,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of OnlyVoice-RLPV2-D3\n",
+      "------------------------------\n",
+      "0\t0.8333333333333334\n",
+      "1\t0.7666666666666667\n",
+      "2\t0.8333333333333334\n",
+      "3\t0.7333333333333333\n",
+      "4\t0.8\n",
+      "5\t0.7333333333333333\n",
+      "6\t0.8666666666666667\n",
+      "7\t0.7666666666666667\n",
+      "8\t0.8\n",
+      "9\t0.7666666666666667\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7899999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierOnlyVoiceD3RLPV2 = getRandomForestPrecision(baseOnlyVoiceD3RLPV2Scores, groupOnlyVoiceD3RLPV2Scores, 'OnlyVoice-RLPV2-D3')"
+   ]
   },
   {
    "cell_type": "markdown",
