run new experiments
use less classes (A, B, C, D) / (A, C, D)

--- a/1_preprocessing/sound.ipynb
+++ b/1_preprocessing/sound.ipynb
@@ -12168,6 +12168,428 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1409,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groupD1FCScores = [[ele[0],ele[1],ele[2],ele[3],ele[-1]] for ele in debugStandardGroupD1Scores]\n",
+    "groupD2FCScores = [[ele[0],ele[1],ele[2],ele[3],ele[-1]] for ele in debugStandardGroupD2Scores]\n",
+    "groupD3FCScores = [[ele[0],ele[1],ele[2],ele[3],ele[-1]] for ele in debugStandardGroupD3Scores]\n",
+    "baseD1FCScores = [[ele[0],ele[1],ele[2],ele[3],ele[-1]] for ele in debugStandardBaseD1Scores]\n",
+    "baseD2FCScores = [[ele[0],ele[1],ele[2],ele[3],ele[-1]] for ele in debugStandardBaseD2Scores]\n",
+    "baseD3FCScores = [[ele[0],ele[1],ele[2],ele[3],ele[-1]] for ele in debugStandardBaseD3Scores]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1410,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of FourClasses-D1\n",
+      "------------------------------\n",
+      "0\t0.8\n",
+      "1\t0.7333333333333333\n",
+      "2\t0.8\n",
+      "3\t0.8\n",
+      "4\t0.7333333333333333\n",
+      "5\t0.8333333333333334\n",
+      "6\t0.8333333333333334\n",
+      "7\t0.7666666666666667\n",
+      "8\t0.7666666666666667\n",
+      "9\t0.7\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7766666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD1FC = getRandomForestPrecision(baseD1FCScores, groupD1FCScores, 'FourClasses-D1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1411,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of FourClasses-D2\n",
+      "------------------------------\n",
+      "0\t0.7666666666666667\n",
+      "1\t0.8333333333333334\n",
+      "2\t0.7666666666666667\n",
+      "3\t0.7666666666666667\n",
+      "4\t0.8333333333333334\n",
+      "5\t0.7333333333333333\n",
+      "6\t0.7666666666666667\n",
+      "7\t0.8\n",
+      "8\t0.7666666666666667\n",
+      "9\t0.7666666666666667\n",
+      "------------------------------\n",
+      "Avg. precision: 0.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD2FC = getRandomForestPrecision(baseD2FCScores, groupD2FCScores, 'FourClasses-D2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1414,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of FourClasses-D3\n",
+      "------------------------------\n",
+      "0\t0.8333333333333334\n",
+      "1\t0.7\n",
+      "2\t0.8\n",
+      "3\t0.7\n",
+      "4\t0.7333333333333333\n",
+      "5\t0.8666666666666667\n",
+      "6\t0.8333333333333334\n",
+      "7\t0.8\n",
+      "8\t0.7666666666666667\n",
+      "9\t0.7333333333333333\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7766666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD3FC = getRandomForestPrecision(baseD3FCScores, groupD3FCScores, 'FourClasses-D3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1415,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groupD1TCScores = [[ele[0],ele[2],ele[3],ele[-1]] for ele in debugStandardGroupD1Scores]\n",
+    "groupD2TCScores = [[ele[0],ele[2],ele[3],ele[-1]] for ele in debugStandardGroupD2Scores]\n",
+    "groupD3TCScores = [[ele[0],ele[2],ele[3],ele[-1]] for ele in debugStandardGroupD3Scores]\n",
+    "baseD1TCScores = [[ele[0],ele[2],ele[3],ele[-1]] for ele in debugStandardBaseD1Scores]\n",
+    "baseD2TCScores = [[ele[0],ele[2],ele[3],ele[-1]] for ele in debugStandardBaseD2Scores]\n",
+    "baseD3TCScores = [[ele[0],ele[2],ele[3],ele[-1]] for ele in debugStandardBaseD3Scores]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1417,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of ThreeClasses-D1\n",
+      "------------------------------\n",
+      "0\t0.7333333333333333\n",
+      "1\t0.8333333333333334\n",
+      "2\t0.7\n",
+      "3\t0.7\n",
+      "4\t0.7666666666666667\n",
+      "5\t0.8\n",
+      "6\t0.8333333333333334\n",
+      "7\t0.8333333333333334\n",
+      "8\t0.7333333333333333\n",
+      "9\t0.7666666666666667\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7699999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD1TC = getRandomForestPrecision(baseD1TCScores, groupD1TCScores, 'ThreeClasses-D1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1418,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of ThreeClasses-D2\n",
+      "------------------------------\n",
+      "0\t0.7333333333333333\n",
+      "1\t0.7333333333333333\n",
+      "2\t0.7333333333333333\n",
+      "3\t0.7333333333333333\n",
+      "4\t0.6\n",
+      "5\t0.8\n",
+      "6\t0.8666666666666667\n",
+      "7\t0.7666666666666667\n",
+      "8\t0.6333333333333333\n",
+      "9\t0.6333333333333333\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7233333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD2TC = getRandomForestPrecision(baseD2TCScores, groupD2TCScores, 'ThreeClasses-D2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1419,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of ThreeClasses-D3\n",
+      "------------------------------\n",
+      "0\t0.9333333333333333\n",
+      "1\t0.7666666666666667\n",
+      "2\t0.8\n",
+      "3\t0.6666666666666666\n",
+      "4\t0.8\n",
+      "5\t0.8\n",
+      "6\t0.7333333333333333\n",
+      "7\t0.6666666666666666\n",
+      "8\t0.8333333333333334\n",
+      "9\t0.8666666666666667\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7866666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierD3TC = getRandomForestPrecision(baseD3TCScores, groupD3TCScores, 'ThreeClasses-D3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1420,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groupVoiceOnlyD1FCScores = [[ele[0],ele[1],ele[2],ele[3]] for ele in debugStandardGroupD1Scores]\n",
+    "groupVoiceOnlyD2FCScores = [[ele[0],ele[1],ele[2],ele[3]] for ele in debugStandardGroupD2Scores]\n",
+    "groupVoiceOnlyD3FCScores = [[ele[0],ele[1],ele[2],ele[3]] for ele in debugStandardGroupD3Scores]\n",
+    "baseVoiceOnlyD1FCScores = [[ele[0],ele[1],ele[2],ele[3]] for ele in debugStandardBaseD1Scores]\n",
+    "baseVoiceOnlyD2FCScores = [[ele[0],ele[1],ele[2],ele[3]] for ele in debugStandardBaseD2Scores]\n",
+    "baseVoiceOnlyD3FCScores = [[ele[0],ele[1],ele[2],ele[3]] for ele in debugStandardBaseD3Scores]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1421,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of VoiceOnlyFC-D1\n",
+      "------------------------------\n",
+      "0\t0.7666666666666667\n",
+      "1\t0.9333333333333333\n",
+      "2\t0.8333333333333334\n",
+      "3\t0.7333333333333333\n",
+      "4\t0.7333333333333333\n",
+      "5\t0.8\n",
+      "6\t0.6333333333333333\n",
+      "7\t0.8\n",
+      "8\t0.6333333333333333\n",
+      "9\t0.7666666666666667\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7633333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierVoiceOnlyD1FC = getRandomForestPrecision(baseVoiceOnlyD1FCScores, groupVoiceOnlyD1FCScores, 'VoiceOnlyFC-D1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1422,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of VoiceOnlyFC-D2\n",
+      "------------------------------\n",
+      "0\t0.8\n",
+      "1\t0.7\n",
+      "2\t0.8\n",
+      "3\t0.7666666666666667\n",
+      "4\t0.7666666666666667\n",
+      "5\t0.7333333333333333\n",
+      "6\t0.7333333333333333\n",
+      "7\t0.6333333333333333\n",
+      "8\t0.8666666666666667\n",
+      "9\t0.6666666666666666\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7466666666666668\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierVoiceOnlyD2FC = getRandomForestPrecision(baseVoiceOnlyD2FCScores, groupVoiceOnlyD2FCScores, 'VoiceOnlyFC-D2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1428,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of VoiceOnlyFC-D3\n",
+      "------------------------------\n",
+      "0\t0.7\n",
+      "1\t0.6\n",
+      "2\t0.8666666666666667\n",
+      "3\t0.6333333333333333\n",
+      "4\t0.7333333333333333\n",
+      "5\t0.7333333333333333\n",
+      "6\t0.8333333333333334\n",
+      "7\t0.6\n",
+      "8\t0.6333333333333333\n",
+      "9\t0.7\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7033333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierVoiceOnlyD3FC = getRandomForestPrecision(baseVoiceOnlyD3FCScores, groupVoiceOnlyD3FCScores, 'VoiceOnlyFC-D3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1429,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groupVoiceOnlyD1TCScores = [[ele[0],ele[2],ele[3]] for ele in debugStandardGroupD1Scores]\n",
+    "groupVoiceOnlyD2TCScores = [[ele[0],ele[2],ele[3]] for ele in debugStandardGroupD2Scores]\n",
+    "groupVoiceOnlyD3TCScores = [[ele[0],ele[2],ele[3]] for ele in debugStandardGroupD3Scores]\n",
+    "baseVoiceOnlyD1TCScores = [[ele[0],ele[2],ele[3]] for ele in debugStandardBaseD1Scores]\n",
+    "baseVoiceOnlyD2TCScores = [[ele[0],ele[2],ele[3]] for ele in debugStandardBaseD2Scores]\n",
+    "baseVoiceOnlyD3TCScores = [[ele[0],ele[2],ele[3]] for ele in debugStandardBaseD3Scores]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1435,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of VoiceOnlyTC-D1\n",
+      "------------------------------\n",
+      "0\t0.7333333333333333\n",
+      "1\t0.8666666666666667\n",
+      "2\t0.7666666666666667\n",
+      "3\t0.8333333333333334\n",
+      "4\t0.7333333333333333\n",
+      "5\t0.7666666666666667\n",
+      "6\t0.6333333333333333\n",
+      "7\t0.7333333333333333\n",
+      "8\t0.7\n",
+      "9\t0.8333333333333334\n",
+      "------------------------------\n",
+      "Avg. precision: 0.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierVoiceOnlyD1TC = getRandomForestPrecision(baseVoiceOnlyD1TCScores, groupVoiceOnlyD1TCScores, 'VoiceOnlyTC-D1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1432,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of VoiceOnlyTC-D2\n",
+      "------------------------------\n",
+      "0\t0.8\n",
+      "1\t0.8333333333333334\n",
+      "2\t0.6\n",
+      "3\t0.7666666666666667\n",
+      "4\t0.7666666666666667\n",
+      "5\t0.7666666666666667\n",
+      "6\t0.8\n",
+      "7\t0.7333333333333333\n",
+      "8\t0.7\n",
+      "9\t0.8333333333333334\n",
+      "------------------------------\n",
+      "Avg. precision: 0.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierVoiceOnlyD2TC = getRandomForestPrecision(baseVoiceOnlyD2TCScores, groupVoiceOnlyD2TCScores, 'VoiceOnlyTC-D2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1434,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of VoiceOnlyTC-D3\n",
+      "------------------------------\n",
+      "0\t0.7\n",
+      "1\t0.7\n",
+      "2\t0.7666666666666667\n",
+      "3\t0.7666666666666667\n",
+      "4\t0.8666666666666667\n",
+      "5\t0.6333333333333333\n",
+      "6\t0.7666666666666667\n",
+      "7\t0.6666666666666666\n",
+      "8\t0.6666666666666666\n",
+      "9\t0.7\n",
+      "------------------------------\n",
+      "Avg. precision: 0.7233333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifierVoiceOnlyD3TC = getRandomForestPrecision(baseVoiceOnlyD3TCScores, groupVoiceOnlyD3TCScores, 'VoiceOnlyTC-D3')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
