--- a/1_preprocessing/sound.ipynb
+++ b/1_preprocessing/sound.ipynb
@@ -12589,6 +12589,211 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1441,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import average_precision_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1455,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getAveragePrecision(cls, baseData, groupData):\n",
+    "    LABELS = []\n",
+    "    PREDICTS = []\n",
+    "    for cl in cls:\n",
+    "        print(cl.name)\n",
+    "        testIndex = list(cl.test_index)\n",
+    "        for ele in testIndex:\n",
+    "            if ele < 150:\n",
+    "                LABELS.append(0)\n",
+    "                PREDICTS.append(cl.classifier.predict([baseData[ele]]))\n",
+    "            else: \n",
+    "                LABELS.append(1)\n",
+    "                PREDICTS.append(cl.classifier.predict([groupData[ele-150]]))\n",
+    "    \n",
+    "    average_precision = average_precision_score(LABELS, PREDICTS)\n",
+    "    print('Avg Precision: ', average_precision)\n",
+    "    return average_precision\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1456,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DebugStandard-D1-0\n",
+      "DebugStandard-D1-1\n",
+      "DebugStandard-D1-2\n",
+      "DebugStandard-D1-3\n",
+      "DebugStandard-D1-4\n",
+      "DebugStandard-D1-5\n",
+      "DebugStandard-D1-6\n",
+      "DebugStandard-D1-7\n",
+      "DebugStandard-D1-8\n",
+      "DebugStandard-D1-9\n",
+      "Avg Precision:  0.731875\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionD1 = getAveragePrecision(classifierDebugStandardD1, debugStandardBaseD1Scores, debugStandardGroupD1Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1457,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DebugStandard-D2-0\n",
+      "DebugStandard-D2-1\n",
+      "DebugStandard-D2-2\n",
+      "DebugStandard-D2-3\n",
+      "DebugStandard-D2-4\n",
+      "DebugStandard-D2-5\n",
+      "DebugStandard-D2-6\n",
+      "DebugStandard-D2-7\n",
+      "DebugStandard-D2-8\n",
+      "DebugStandard-D2-9\n",
+      "Avg Precision:  0.749264705882\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionD2 = getAveragePrecision(classifierDebugStandardD2, debugStandardBaseD2Scores, debugStandardGroupD2Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1458,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DebugStandard-D3-0\n",
+      "DebugStandard-D3-1\n",
+      "DebugStandard-D3-2\n",
+      "DebugStandard-D3-3\n",
+      "DebugStandard-D3-4\n",
+      "DebugStandard-D3-5\n",
+      "DebugStandard-D3-6\n",
+      "DebugStandard-D3-7\n",
+      "DebugStandard-D3-8\n",
+      "DebugStandard-D3-9\n",
+      "Avg Precision:  0.737080291971\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionD3 = getAveragePrecision(classifierDebugStandardD3, debugStandardBaseD3Scores, debugStandardGroupD3Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1459,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OnlyVoice-D1-0\n",
+      "OnlyVoice-D1-1\n",
+      "OnlyVoice-D1-2\n",
+      "OnlyVoice-D1-3\n",
+      "OnlyVoice-D1-4\n",
+      "OnlyVoice-D1-5\n",
+      "OnlyVoice-D1-6\n",
+      "OnlyVoice-D1-7\n",
+      "OnlyVoice-D1-8\n",
+      "OnlyVoice-D1-9\n",
+      "Avg Precision:  0.742465753425\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionOnlyVoiceD1 = getAveragePrecision(classifierOnlyVoiceD1, onlyVoiceBaseD1Scores, onlyVoiceGroupD1Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1460,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OnlyVoice-D2-0\n",
+      "OnlyVoice-D2-1\n",
+      "OnlyVoice-D2-2\n",
+      "OnlyVoice-D2-3\n",
+      "OnlyVoice-D2-4\n",
+      "OnlyVoice-D2-5\n",
+      "OnlyVoice-D2-6\n",
+      "OnlyVoice-D2-7\n",
+      "OnlyVoice-D2-8\n",
+      "OnlyVoice-D2-9\n",
+      "Avg Precision:  0.71554192229\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionOnlyVoiceD2 = getAveragePrecision(classifierOnlyVoiceD2, onlyVoiceBaseD2Scores, onlyVoiceGroupD2Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1461,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OnlyVoice-D3-0\n",
+      "OnlyVoice-D3-1\n",
+      "OnlyVoice-D3-2\n",
+      "OnlyVoice-D3-3\n",
+      "OnlyVoice-D3-4\n",
+      "OnlyVoice-D3-5\n",
+      "OnlyVoice-D3-6\n",
+      "OnlyVoice-D3-7\n",
+      "OnlyVoice-D3-8\n",
+      "OnlyVoice-D3-9\n",
+      "Avg Precision:  0.705405405405\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionOnlyVoiceD3 = getAveragePrecision(classifierOnlyVoiceD3, onlyVoiceBaseD3Scores, onlyVoiceGroupD3Scores)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
