try another precision method

--- a/1_preprocessing/sound.ipynb
+++ b/1_preprocessing/sound.ipynb
@@ -12608,7 +12608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1455,
+   "execution_count": 1466,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12621,10 +12621,12 @@
     "        for ele in testIndex:\n",
     "            if ele < 150:\n",
     "                LABELS.append(0)\n",
-    "                PREDICTS.append(cl.classifier.predict([baseData[ele]]))\n",
+    "                PREDICTS.append(cl.classifier.predict_proba([baseData[ele]])[:,1])\n",
+    "#                 PREDICTS.append(cl.classifier.predict_proba([baseData[ele]]))\n",
     "            else: \n",
     "                LABELS.append(1)\n",
-    "                PREDICTS.append(cl.classifier.predict([groupData[ele-150]]))\n",
+    "                PREDICTS.append(cl.classifier.predict_proba([groupData[ele-150]])[:,1])\n",
+    "#                 PREDICTS.append(cl.classifier.predict_proba([groupData[ele]]))\n",
     "    \n",
     "    average_precision = average_precision_score(LABELS, PREDICTS)\n",
     "    print('Avg Precision: ', average_precision)\n",
@@ -12791,6 +12793,168 @@
    ],
    "source": [
     "precisionOnlyVoiceD3 = getAveragePrecision(classifierOnlyVoiceD3, onlyVoiceBaseD3Scores, onlyVoiceGroupD3Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1467,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DebugStandard-D1-0\n",
+      "DebugStandard-D1-1\n",
+      "DebugStandard-D1-2\n",
+      "DebugStandard-D1-3\n",
+      "DebugStandard-D1-4\n",
+      "DebugStandard-D1-5\n",
+      "DebugStandard-D1-6\n",
+      "DebugStandard-D1-7\n",
+      "DebugStandard-D1-8\n",
+      "DebugStandard-D1-9\n",
+      "Avg Precision:  0.864608295384\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionD11 = getAveragePrecision(classifierDebugStandardD1, debugStandardBaseD1Scores, debugStandardGroupD1Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1468,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DebugStandard-D2-0\n",
+      "DebugStandard-D2-1\n",
+      "DebugStandard-D2-2\n",
+      "DebugStandard-D2-3\n",
+      "DebugStandard-D2-4\n",
+      "DebugStandard-D2-5\n",
+      "DebugStandard-D2-6\n",
+      "DebugStandard-D2-7\n",
+      "DebugStandard-D2-8\n",
+      "DebugStandard-D2-9\n",
+      "Avg Precision:  0.872644648886\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionD22 = getAveragePrecision(classifierDebugStandardD2, debugStandardBaseD2Scores, debugStandardGroupD2Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1469,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DebugStandard-D3-0\n",
+      "DebugStandard-D3-1\n",
+      "DebugStandard-D3-2\n",
+      "DebugStandard-D3-3\n",
+      "DebugStandard-D3-4\n",
+      "DebugStandard-D3-5\n",
+      "DebugStandard-D3-6\n",
+      "DebugStandard-D3-7\n",
+      "DebugStandard-D3-8\n",
+      "DebugStandard-D3-9\n",
+      "Avg Precision:  0.853783104778\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionD33 = getAveragePrecision(classifierDebugStandardD3, debugStandardBaseD3Scores, debugStandardGroupD3Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1470,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OnlyVoice-D1-0\n",
+      "OnlyVoice-D1-1\n",
+      "OnlyVoice-D1-2\n",
+      "OnlyVoice-D1-3\n",
+      "OnlyVoice-D1-4\n",
+      "OnlyVoice-D1-5\n",
+      "OnlyVoice-D1-6\n",
+      "OnlyVoice-D1-7\n",
+      "OnlyVoice-D1-8\n",
+      "OnlyVoice-D1-9\n",
+      "Avg Precision:  0.872649329933\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionOnlyVoiceD11 = getAveragePrecision(classifierOnlyVoiceD1, onlyVoiceBaseD1Scores, onlyVoiceGroupD1Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1471,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OnlyVoice-D2-0\n",
+      "OnlyVoice-D2-1\n",
+      "OnlyVoice-D2-2\n",
+      "OnlyVoice-D2-3\n",
+      "OnlyVoice-D2-4\n",
+      "OnlyVoice-D2-5\n",
+      "OnlyVoice-D2-6\n",
+      "OnlyVoice-D2-7\n",
+      "OnlyVoice-D2-8\n",
+      "OnlyVoice-D2-9\n",
+      "Avg Precision:  0.854407842256\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionOnlyVoiceD22 = getAveragePrecision(classifierOnlyVoiceD2, onlyVoiceBaseD2Scores, onlyVoiceGroupD2Scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1472,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OnlyVoice-D3-0\n",
+      "OnlyVoice-D3-1\n",
+      "OnlyVoice-D3-2\n",
+      "OnlyVoice-D3-3\n",
+      "OnlyVoice-D3-4\n",
+      "OnlyVoice-D3-5\n",
+      "OnlyVoice-D3-6\n",
+      "OnlyVoice-D3-7\n",
+      "OnlyVoice-D3-8\n",
+      "OnlyVoice-D3-9\n",
+      "Avg Precision:  0.817376112332\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisionOnlyVoiceD33 = getAveragePrecision(classifierOnlyVoiceD3, onlyVoiceBaseD3Scores, onlyVoiceGroupD3Scores)"
    ]
   },
   {
